tests/error/invalid_global_file.gw
#! [contains] can only be used at file scope
{
var global int i;
}
